app/assets/stylesheets/common/base/modal.scss
/* ... */
.delete-user-modal {
  .modal-footer {
    .btn {
      line-height: var(--line-height-medium);
    }
  }
}

.admin-delete-user-posts-progress-modal {
  .progress-bar {
    height: 15px;
    position: relative;
    background: var(--primary-low-mid);
    border-radius: 25px;
    overflow: hidden;
    margin: 30px 0 20px;
    span {
      display: block;
      width: 0%;
      height: 100%;
      background-color: var(--tertiary);
      position: relative;
      transition: width 0.6s linear;
    }
  }
}

.incoming-email-modal {
  max-height: 80vh;

  .btn {
    transition: none;
    background-color: transparent;
    margin-right: 5px;
    &:hover,
    &.active {
      color: var(--primary);
    }
    &.active {
      font-weight: bold;
    }
    &:focus {
      outline: 2px solid var(--primary-low);
    }
  }
  .incoming-email-tabs {
    margin-bottom: 15px;
  }
  .incoming-email-content {
    height: 300px;
    max-width: 100%;
    width: 90vw; // forcing textarea wider
    textarea,
    .incoming-email-html-part {
      height: 95%;
      border: none;
      border-top: 1px solid var(--primary-low);
      padding-top: 10px;
      width: 100%;
    }
    textarea {
      font-family: var(--d-font-family--monospace);
      resize: none;
      border-radius: 0;
      box-shadow: none;
    }
    .incoming-email-html-part {
      width: calc(100% - 36px);
      padding: 10px 4px 4px 4px;
    }
    @media screen and (max-width: 760px) {
      .incoming-email-html-part {
        width: calc(100% - 10px);
      }
    }
  }
}

.modal .modal-body.change-timestamp {
  #date-container {
    .pika-single {
      width: 100%;
      box-sizing: border-box;
      display: flex;
      justify-content: center;
    }
  }

  form {
    display: flex;

    .date-picker-wrapper,
    input[type="time"] {
      width: 50%;
    }

    .date-picker-wrapper {
      display: flex;
      flex: 1;

      .date-picker {
        flex: 1;
      }
    }

    input.date-picker,
    input[type="time"] {
      text-align: left;
      margin: 0;
    }
  }
}

.change-timestamp {
  width: 28em; // scales with user font-size
  max-width: 90vw; // prevents overflow due to extra large user font-size
}

.change-timestamp {
  #date-container {
    .pika-single {
      position: relative !important; // overriding another important
      display: inline-block;
      margin-top: 0.5em;
    }
  }

  .date-picker-wrapper {
    min-width: 130px;
    margin-right: 0.5em;
  }

  input[type="time"] {
    width: 130px;
  }

  form {
    margin: 0;
  }
}

.flag-modal-body {
  max-height: 450px;
  .flag-action-type-details {
    width: 100%;
    // max-width: 500px;
    line-height: var(--line-height-large);
  }
}

.flag-message {
  margin: 0;
}

.custom-message-length {
  color: var(--primary-medium);
  font-size: var(--font-down-1);
}

.ignore-duration-with-username-modal {
  .future-date-input {
    margin-top: 1em;
  }
}

.modal:not(.has-tabs) {
  .modal-tab {
    position: absolute;
    width: 95%;
  }
}

.modal {
  &.has-tabs {
    .modal-tabs {
      display: inline-flex;
      flex-wrap: wrap;
      flex: 1 0 auto;
      margin: 0;

      .modal-tab {
        list-style: none;
        padding: 4px 8px;
        margin-right: 4px;
        cursor: pointer;

        &.is-active {
          color: var(--secondary);
          background: var(--danger);

          &.single-tab {
            background: none;
            color: var(--primary);
            padding: 0;
            font-size: var(--font-up-3);
            font-weight: bold;
          }
        }
      }
    }
  }
}

.bulk-notification-list {
  margin-bottom: 1.5em;
}

.notification-level-radio {
  flex-wrap: wrap;
  align-items: baseline;
  margin-bottom: 0.5em;
  .description {
    width: 100%;
    margin-top: 0.25em;
  }
}

.modal-body .codeblock-buttons {
  margin: 0;

  button {
    top: 21px;
  }
}

.json-editor-btn-delete {
  @extend .btn-danger;
  @extend .no-text;
}

.json-editor-btn-collapse {
  @extend .no-text;
  @extend .btn-flat;
  @extend .btn-small;
}

.confirm-session {
  &__instructions {
    margin-bottom: 1.5em;
  }

  form {
    margin: 1.5em 0;
  }

  &__passkey .btn {
    padding-left: 0.25em;
    padding-right: 0.25em;
  }

  &__fine-print {
    font-size: var(--font-down-1);
    color: var(--primary-medium);
    max-width: 500px;
  }
}

.rename-passkey__message {
  max-width: 500px;
  margin-bottom: 2em;
}

